parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> variables_list metodos
Rule 2     variables_list -> variables_list variables
Rule 3     variables_list -> empty
Rule 4     variables -> VAR tipo ID lista_variables SEMICOLON
Rule 5     variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON
Rule 6     lista_variables -> COMMA ID lista_variables
Rule 7     lista_variables -> COMMA ID LEFTSB INT_CTE RIGHTSB lista_variables
Rule 8     lista_variables -> empty
Rule 9     metodos -> metodos metodo
Rule 10    metodos -> empty
Rule 11    metodo -> METHOD VOID MAIN LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB
Rule 12    metodo -> METHOD VOID ID LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB
Rule 13    metodo -> METHOD tipo ID LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB
Rule 14    params -> params parametro
Rule 15    params -> empty
Rule 16    parametro -> tipo ID mas_parametros
Rule 17    mas_parametros -> COMMA tipo ID
Rule 18    mas_parametros -> empty
Rule 19    bloque -> bloque estatuto
Rule 20    bloque -> empty
Rule 21    estatuto -> return
Rule 22    estatuto -> lectura
Rule 23    estatuto -> escritura
Rule 24    estatuto -> llamada SEMICOLON
Rule 25    estatuto -> asignacion
Rule 26    estatuto -> ciclo
Rule 27    estatuto -> condicion
Rule 28    return -> RETURN exp SEMICOLON
Rule 29    lectura -> ID ASSIGN READ LEFTP RIGHTP SEMICOLON
Rule 30    escritura -> PRINT LEFTP exp RIGHTP SEMICOLON
Rule 31    llamada -> ID LEFTP llamada_list RIGHTP
Rule 32    llamada_list -> llamada_list args
Rule 33    llamada_list -> empty
Rule 34    args -> exp mas_args
Rule 35    mas_args -> COMMA exp
Rule 36    mas_args -> empty
Rule 37    asignacion -> ID ASSIGN exp SEMICOLON
Rule 38    asignacion -> ID LEFTSB exp RIGHTSB ASSIGN exp SEMICOLON
Rule 39    ciclo -> WHILE LEFTP exp RIGHTP LEFTB bloque RIGHTB
Rule 40    condicion -> IF LEFTP exp RIGHTP LEFTB bloque RIGHTB
Rule 41    condicion -> IF LEFTP exp RIGHTP LEFTB bloque RIGHTB ELSE LEFTB bloque RIGHTB
Rule 42    exp -> llamada
Rule 43    exp -> expresion
Rule 44    expresion -> expresion1
Rule 45    expresion -> expresion1 TIMES expresion
Rule 46    expresion -> expresion1 DIVISION expresion
Rule 47    expresion1 -> expresion2
Rule 48    expresion1 -> expresion2 SUM expresion1
Rule 49    expresion1 -> expresion2 LESS expresion1
Rule 50    expresion2 -> expresion3
Rule 51    expresion2 -> expresion3 EQUALS expresion2
Rule 52    expresion2 -> expresion3 NOTEQUAL expresion2
Rule 53    expresion2 -> expresion3 GREATEREQUAL expresion2
Rule 54    expresion2 -> expresion3 GREATERTHAN expresion2
Rule 55    expresion2 -> expresion3 LESSTHAN expresion2
Rule 56    expresion2 -> expresion3 LESSEQUAL expresion2
Rule 57    expresion3 -> expresion4
Rule 58    expresion3 -> expresion4 AND expresion3
Rule 59    expresion3 -> expresion4 OR expresion3
Rule 60    expresion4 -> constante
Rule 61    expresion4 -> ID
Rule 62    expresion4 -> LEFTP expresion RIGHTP
Rule 63    tipo -> INT
Rule 64    tipo -> CHAR
Rule 65    tipo -> BOOLEAN
Rule 66    tipo -> FLOAT
Rule 67    tipo -> STRING
Rule 68    constante -> INT_CTE
Rule 69    constante -> FLOAT_CTE
Rule 70    constante -> CHAR_CTE
Rule 71    constante -> STRING_CTE
Rule 72    constante -> TRUE
Rule 73    constante -> FALSE
Rule 74    empty -> <empty>

Terminals, with rules where they appear

AND                  : 58
ASSIGN               : 29 37 38
BOOLEAN              : 65
CHAR                 : 64
CHAR_CTE             : 70
COMMA                : 6 7 17 35
DIVISION             : 46
ELSE                 : 41
EQUALS               : 51
FALSE                : 73
FLOAT                : 66
FLOAT_CTE            : 69
GREATEREQUAL         : 53
GREATERTHAN          : 54
ID                   : 4 5 6 7 12 13 16 17 29 31 37 38 61
IF                   : 40 41
INT                  : 63
INT_CTE              : 5 7 68
LEFTB                : 11 12 13 39 40 41 41
LEFTP                : 11 12 13 29 30 31 39 40 41 62
LEFTSB               : 5 7 38
LESS                 : 49
LESSEQUAL            : 56
LESSTHAN             : 55
MAIN                 : 11
METHOD               : 11 12 13
NOTEQUAL             : 52
OR                   : 59
PRINT                : 30
READ                 : 29
RETURN               : 28
RIGHTB               : 11 12 13 39 40 41 41
RIGHTP               : 11 12 13 29 30 31 39 40 41 62
RIGHTSB              : 5 7 38
SEMICOLON            : 4 5 24 28 29 30 37 38
STRING               : 67
STRING_CTE           : 71
SUM                  : 48
TIMES                : 45
TRUE                 : 72
VAR                  : 4 5
VOID                 : 11 12
WHILE                : 39
error                : 

Nonterminals, with rules where they appear

args                 : 32
asignacion           : 25
bloque               : 11 12 13 19 39 40 41 41
ciclo                : 26
condicion            : 27
constante            : 60
empty                : 3 8 10 15 18 20 33 36
escritura            : 23
estatuto             : 19
exp                  : 28 30 34 35 37 38 38 39 40 41
expresion            : 43 45 46 62
expresion1           : 44 45 46 48 49
expresion2           : 47 48 49 51 52 53 54 55 56
expresion3           : 50 51 52 53 54 55 56 58 59
expresion4           : 57 58 59
lectura              : 22
lista_variables      : 4 5 6 7
llamada              : 24 42
llamada_list         : 31 32
mas_args             : 34
mas_parametros       : 16
metodo               : 9
metodos              : 1 9
parametro            : 14
params               : 11 12 13 14
programa             : 0
return               : 21
tipo                 : 4 5 13 16 17
variables            : 2
variables_list       : 1 2 11 12 13

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . variables_list metodos
    (2) variables_list -> . variables_list variables
    (3) variables_list -> . empty
    (74) empty -> .

    VAR             reduce using rule 74 (empty -> .)
    METHOD          reduce using rule 74 (empty -> .)
    $end            reduce using rule 74 (empty -> .)

    variables_list                 shift and go to state 1
    programa                       shift and go to state 2
    empty                          shift and go to state 3

state 1

    (1) programa -> variables_list . metodos
    (2) variables_list -> variables_list . variables
    (9) metodos -> . metodos metodo
    (10) metodos -> . empty
    (4) variables -> . VAR tipo ID lista_variables SEMICOLON
    (5) variables -> . VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON
    (74) empty -> .

    VAR             shift and go to state 6
    METHOD          reduce using rule 74 (empty -> .)
    $end            reduce using rule 74 (empty -> .)

    variables                      shift and go to state 4
    metodos                        shift and go to state 5
    empty                          shift and go to state 7

state 2

    (0) S' -> programa .



state 3

    (3) variables_list -> empty .

    VAR             reduce using rule 3 (variables_list -> empty .)
    RIGHTB          reduce using rule 3 (variables_list -> empty .)
    RETURN          reduce using rule 3 (variables_list -> empty .)
    ID              reduce using rule 3 (variables_list -> empty .)
    PRINT           reduce using rule 3 (variables_list -> empty .)
    WHILE           reduce using rule 3 (variables_list -> empty .)
    IF              reduce using rule 3 (variables_list -> empty .)
    METHOD          reduce using rule 3 (variables_list -> empty .)
    $end            reduce using rule 3 (variables_list -> empty .)


state 4

    (2) variables_list -> variables_list variables .

    VAR             reduce using rule 2 (variables_list -> variables_list variables .)
    RIGHTB          reduce using rule 2 (variables_list -> variables_list variables .)
    RETURN          reduce using rule 2 (variables_list -> variables_list variables .)
    ID              reduce using rule 2 (variables_list -> variables_list variables .)
    PRINT           reduce using rule 2 (variables_list -> variables_list variables .)
    WHILE           reduce using rule 2 (variables_list -> variables_list variables .)
    IF              reduce using rule 2 (variables_list -> variables_list variables .)
    METHOD          reduce using rule 2 (variables_list -> variables_list variables .)
    $end            reduce using rule 2 (variables_list -> variables_list variables .)


state 5

    (1) programa -> variables_list metodos .
    (9) metodos -> metodos . metodo
    (11) metodo -> . METHOD VOID MAIN LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB
    (12) metodo -> . METHOD VOID ID LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB
    (13) metodo -> . METHOD tipo ID LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB

    $end            reduce using rule 1 (programa -> variables_list metodos .)
    METHOD          shift and go to state 9

    metodo                         shift and go to state 8

state 6

    (4) variables -> VAR . tipo ID lista_variables SEMICOLON
    (5) variables -> VAR . tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON
    (63) tipo -> . INT
    (64) tipo -> . CHAR
    (65) tipo -> . BOOLEAN
    (66) tipo -> . FLOAT
    (67) tipo -> . STRING

    INT             shift and go to state 12
    CHAR            shift and go to state 13
    BOOLEAN         shift and go to state 14
    FLOAT           shift and go to state 10
    STRING          shift and go to state 15

    tipo                           shift and go to state 11

state 7

    (10) metodos -> empty .

    METHOD          reduce using rule 10 (metodos -> empty .)
    $end            reduce using rule 10 (metodos -> empty .)


state 8

    (9) metodos -> metodos metodo .

    METHOD          reduce using rule 9 (metodos -> metodos metodo .)
    $end            reduce using rule 9 (metodos -> metodos metodo .)


state 9

    (11) metodo -> METHOD . VOID MAIN LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB
    (12) metodo -> METHOD . VOID ID LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB
    (13) metodo -> METHOD . tipo ID LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB
    (63) tipo -> . INT
    (64) tipo -> . CHAR
    (65) tipo -> . BOOLEAN
    (66) tipo -> . FLOAT
    (67) tipo -> . STRING

    VOID            shift and go to state 17
    INT             shift and go to state 12
    CHAR            shift and go to state 13
    BOOLEAN         shift and go to state 14
    FLOAT           shift and go to state 10
    STRING          shift and go to state 15

    tipo                           shift and go to state 16

state 10

    (66) tipo -> FLOAT .

    ID              reduce using rule 66 (tipo -> FLOAT .)


state 11

    (4) variables -> VAR tipo . ID lista_variables SEMICOLON
    (5) variables -> VAR tipo . ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON

    ID              shift and go to state 18


state 12

    (63) tipo -> INT .

    ID              reduce using rule 63 (tipo -> INT .)


state 13

    (64) tipo -> CHAR .

    ID              reduce using rule 64 (tipo -> CHAR .)


state 14

    (65) tipo -> BOOLEAN .

    ID              reduce using rule 65 (tipo -> BOOLEAN .)


state 15

    (67) tipo -> STRING .

    ID              reduce using rule 67 (tipo -> STRING .)


state 16

    (13) metodo -> METHOD tipo . ID LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB

    ID              shift and go to state 19


state 17

    (11) metodo -> METHOD VOID . MAIN LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB
    (12) metodo -> METHOD VOID . ID LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB

    MAIN            shift and go to state 21
    ID              shift and go to state 20


state 18

    (4) variables -> VAR tipo ID . lista_variables SEMICOLON
    (5) variables -> VAR tipo ID . LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON
    (6) lista_variables -> . COMMA ID lista_variables
    (7) lista_variables -> . COMMA ID LEFTSB INT_CTE RIGHTSB lista_variables
    (8) lista_variables -> . empty
    (74) empty -> .

    LEFTSB          shift and go to state 22
    COMMA           shift and go to state 24
    SEMICOLON       reduce using rule 74 (empty -> .)

    lista_variables                shift and go to state 23
    empty                          shift and go to state 25

state 19

    (13) metodo -> METHOD tipo ID . LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB

    LEFTP           shift and go to state 26


state 20

    (12) metodo -> METHOD VOID ID . LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB

    LEFTP           shift and go to state 27


state 21

    (11) metodo -> METHOD VOID MAIN . LEFTP params RIGHTP LEFTB variables_list bloque RIGHTB

    LEFTP           shift and go to state 28


state 22

    (5) variables -> VAR tipo ID LEFTSB . INT_CTE RIGHTSB lista_variables SEMICOLON

    INT_CTE         shift and go to state 29


state 23

    (4) variables -> VAR tipo ID lista_variables . SEMICOLON

    SEMICOLON       shift and go to state 30


state 24

    (6) lista_variables -> COMMA . ID lista_variables
    (7) lista_variables -> COMMA . ID LEFTSB INT_CTE RIGHTSB lista_variables

    ID              shift and go to state 31


state 25

    (8) lista_variables -> empty .

    SEMICOLON       reduce using rule 8 (lista_variables -> empty .)


state 26

    (13) metodo -> METHOD tipo ID LEFTP . params RIGHTP LEFTB variables_list bloque RIGHTB
    (14) params -> . params parametro
    (15) params -> . empty
    (74) empty -> .

    RIGHTP          reduce using rule 74 (empty -> .)
    INT             reduce using rule 74 (empty -> .)
    CHAR            reduce using rule 74 (empty -> .)
    BOOLEAN         reduce using rule 74 (empty -> .)
    FLOAT           reduce using rule 74 (empty -> .)
    STRING          reduce using rule 74 (empty -> .)

    params                         shift and go to state 32
    empty                          shift and go to state 33

state 27

    (12) metodo -> METHOD VOID ID LEFTP . params RIGHTP LEFTB variables_list bloque RIGHTB
    (14) params -> . params parametro
    (15) params -> . empty
    (74) empty -> .

    RIGHTP          reduce using rule 74 (empty -> .)
    INT             reduce using rule 74 (empty -> .)
    CHAR            reduce using rule 74 (empty -> .)
    BOOLEAN         reduce using rule 74 (empty -> .)
    FLOAT           reduce using rule 74 (empty -> .)
    STRING          reduce using rule 74 (empty -> .)

    params                         shift and go to state 34
    empty                          shift and go to state 33

state 28

    (11) metodo -> METHOD VOID MAIN LEFTP . params RIGHTP LEFTB variables_list bloque RIGHTB
    (14) params -> . params parametro
    (15) params -> . empty
    (74) empty -> .

    RIGHTP          reduce using rule 74 (empty -> .)
    INT             reduce using rule 74 (empty -> .)
    CHAR            reduce using rule 74 (empty -> .)
    BOOLEAN         reduce using rule 74 (empty -> .)
    FLOAT           reduce using rule 74 (empty -> .)
    STRING          reduce using rule 74 (empty -> .)

    params                         shift and go to state 35
    empty                          shift and go to state 33

state 29

    (5) variables -> VAR tipo ID LEFTSB INT_CTE . RIGHTSB lista_variables SEMICOLON

    RIGHTSB         shift and go to state 36


state 30

    (4) variables -> VAR tipo ID lista_variables SEMICOLON .

    VAR             reduce using rule 4 (variables -> VAR tipo ID lista_variables SEMICOLON .)
    RIGHTB          reduce using rule 4 (variables -> VAR tipo ID lista_variables SEMICOLON .)
    RETURN          reduce using rule 4 (variables -> VAR tipo ID lista_variables SEMICOLON .)
    ID              reduce using rule 4 (variables -> VAR tipo ID lista_variables SEMICOLON .)
    PRINT           reduce using rule 4 (variables -> VAR tipo ID lista_variables SEMICOLON .)
    WHILE           reduce using rule 4 (variables -> VAR tipo ID lista_variables SEMICOLON .)
    IF              reduce using rule 4 (variables -> VAR tipo ID lista_variables SEMICOLON .)
    METHOD          reduce using rule 4 (variables -> VAR tipo ID lista_variables SEMICOLON .)
    $end            reduce using rule 4 (variables -> VAR tipo ID lista_variables SEMICOLON .)


state 31

    (6) lista_variables -> COMMA ID . lista_variables
    (7) lista_variables -> COMMA ID . LEFTSB INT_CTE RIGHTSB lista_variables
    (6) lista_variables -> . COMMA ID lista_variables
    (7) lista_variables -> . COMMA ID LEFTSB INT_CTE RIGHTSB lista_variables
    (8) lista_variables -> . empty
    (74) empty -> .

    LEFTSB          shift and go to state 37
    COMMA           shift and go to state 24
    SEMICOLON       reduce using rule 74 (empty -> .)

    lista_variables                shift and go to state 38
    empty                          shift and go to state 25

state 32

    (13) metodo -> METHOD tipo ID LEFTP params . RIGHTP LEFTB variables_list bloque RIGHTB
    (14) params -> params . parametro
    (16) parametro -> . tipo ID mas_parametros
    (63) tipo -> . INT
    (64) tipo -> . CHAR
    (65) tipo -> . BOOLEAN
    (66) tipo -> . FLOAT
    (67) tipo -> . STRING

    RIGHTP          shift and go to state 39
    INT             shift and go to state 12
    CHAR            shift and go to state 13
    BOOLEAN         shift and go to state 14
    FLOAT           shift and go to state 10
    STRING          shift and go to state 15

    tipo                           shift and go to state 40
    parametro                      shift and go to state 41

state 33

    (15) params -> empty .

    RIGHTP          reduce using rule 15 (params -> empty .)
    INT             reduce using rule 15 (params -> empty .)
    CHAR            reduce using rule 15 (params -> empty .)
    BOOLEAN         reduce using rule 15 (params -> empty .)
    FLOAT           reduce using rule 15 (params -> empty .)
    STRING          reduce using rule 15 (params -> empty .)


state 34

    (12) metodo -> METHOD VOID ID LEFTP params . RIGHTP LEFTB variables_list bloque RIGHTB
    (14) params -> params . parametro
    (16) parametro -> . tipo ID mas_parametros
    (63) tipo -> . INT
    (64) tipo -> . CHAR
    (65) tipo -> . BOOLEAN
    (66) tipo -> . FLOAT
    (67) tipo -> . STRING

    RIGHTP          shift and go to state 42
    INT             shift and go to state 12
    CHAR            shift and go to state 13
    BOOLEAN         shift and go to state 14
    FLOAT           shift and go to state 10
    STRING          shift and go to state 15

    tipo                           shift and go to state 40
    parametro                      shift and go to state 41

state 35

    (11) metodo -> METHOD VOID MAIN LEFTP params . RIGHTP LEFTB variables_list bloque RIGHTB
    (14) params -> params . parametro
    (16) parametro -> . tipo ID mas_parametros
    (63) tipo -> . INT
    (64) tipo -> . CHAR
    (65) tipo -> . BOOLEAN
    (66) tipo -> . FLOAT
    (67) tipo -> . STRING

    RIGHTP          shift and go to state 43
    INT             shift and go to state 12
    CHAR            shift and go to state 13
    BOOLEAN         shift and go to state 14
    FLOAT           shift and go to state 10
    STRING          shift and go to state 15

    tipo                           shift and go to state 40
    parametro                      shift and go to state 41

state 36

    (5) variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB . lista_variables SEMICOLON
    (6) lista_variables -> . COMMA ID lista_variables
    (7) lista_variables -> . COMMA ID LEFTSB INT_CTE RIGHTSB lista_variables
    (8) lista_variables -> . empty
    (74) empty -> .

    COMMA           shift and go to state 24
    SEMICOLON       reduce using rule 74 (empty -> .)

    lista_variables                shift and go to state 44
    empty                          shift and go to state 25

state 37

    (7) lista_variables -> COMMA ID LEFTSB . INT_CTE RIGHTSB lista_variables

    INT_CTE         shift and go to state 45


state 38

    (6) lista_variables -> COMMA ID lista_variables .

    SEMICOLON       reduce using rule 6 (lista_variables -> COMMA ID lista_variables .)


state 39

    (13) metodo -> METHOD tipo ID LEFTP params RIGHTP . LEFTB variables_list bloque RIGHTB

    LEFTB           shift and go to state 46


state 40

    (16) parametro -> tipo . ID mas_parametros

    ID              shift and go to state 47


state 41

    (14) params -> params parametro .

    RIGHTP          reduce using rule 14 (params -> params parametro .)
    INT             reduce using rule 14 (params -> params parametro .)
    CHAR            reduce using rule 14 (params -> params parametro .)
    BOOLEAN         reduce using rule 14 (params -> params parametro .)
    FLOAT           reduce using rule 14 (params -> params parametro .)
    STRING          reduce using rule 14 (params -> params parametro .)


state 42

    (12) metodo -> METHOD VOID ID LEFTP params RIGHTP . LEFTB variables_list bloque RIGHTB

    LEFTB           shift and go to state 48


state 43

    (11) metodo -> METHOD VOID MAIN LEFTP params RIGHTP . LEFTB variables_list bloque RIGHTB

    LEFTB           shift and go to state 49


state 44

    (5) variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables . SEMICOLON

    SEMICOLON       shift and go to state 50


state 45

    (7) lista_variables -> COMMA ID LEFTSB INT_CTE . RIGHTSB lista_variables

    RIGHTSB         shift and go to state 51


state 46

    (13) metodo -> METHOD tipo ID LEFTP params RIGHTP LEFTB . variables_list bloque RIGHTB
    (2) variables_list -> . variables_list variables
    (3) variables_list -> . empty
    (74) empty -> .

    VAR             reduce using rule 74 (empty -> .)
    RIGHTB          reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)

    variables_list                 shift and go to state 52
    empty                          shift and go to state 3

state 47

    (16) parametro -> tipo ID . mas_parametros
    (17) mas_parametros -> . COMMA tipo ID
    (18) mas_parametros -> . empty
    (74) empty -> .

    COMMA           shift and go to state 55
    RIGHTP          reduce using rule 74 (empty -> .)
    INT             reduce using rule 74 (empty -> .)
    CHAR            reduce using rule 74 (empty -> .)
    BOOLEAN         reduce using rule 74 (empty -> .)
    FLOAT           reduce using rule 74 (empty -> .)
    STRING          reduce using rule 74 (empty -> .)

    mas_parametros                 shift and go to state 53
    empty                          shift and go to state 54

state 48

    (12) metodo -> METHOD VOID ID LEFTP params RIGHTP LEFTB . variables_list bloque RIGHTB
    (2) variables_list -> . variables_list variables
    (3) variables_list -> . empty
    (74) empty -> .

    VAR             reduce using rule 74 (empty -> .)
    RIGHTB          reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)

    variables_list                 shift and go to state 56
    empty                          shift and go to state 3

state 49

    (11) metodo -> METHOD VOID MAIN LEFTP params RIGHTP LEFTB . variables_list bloque RIGHTB
    (2) variables_list -> . variables_list variables
    (3) variables_list -> . empty
    (74) empty -> .

    VAR             reduce using rule 74 (empty -> .)
    RIGHTB          reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)

    variables_list                 shift and go to state 57
    empty                          shift and go to state 3

state 50

    (5) variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .

    VAR             reduce using rule 5 (variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .)
    RIGHTB          reduce using rule 5 (variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .)
    RETURN          reduce using rule 5 (variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .)
    ID              reduce using rule 5 (variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .)
    PRINT           reduce using rule 5 (variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .)
    WHILE           reduce using rule 5 (variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .)
    IF              reduce using rule 5 (variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .)
    METHOD          reduce using rule 5 (variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .)
    $end            reduce using rule 5 (variables -> VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON .)


state 51

    (7) lista_variables -> COMMA ID LEFTSB INT_CTE RIGHTSB . lista_variables
    (6) lista_variables -> . COMMA ID lista_variables
    (7) lista_variables -> . COMMA ID LEFTSB INT_CTE RIGHTSB lista_variables
    (8) lista_variables -> . empty
    (74) empty -> .

    COMMA           shift and go to state 24
    SEMICOLON       reduce using rule 74 (empty -> .)

    lista_variables                shift and go to state 58
    empty                          shift and go to state 25

state 52

    (13) metodo -> METHOD tipo ID LEFTP params RIGHTP LEFTB variables_list . bloque RIGHTB
    (2) variables_list -> variables_list . variables
    (19) bloque -> . bloque estatuto
    (20) bloque -> . empty
    (4) variables -> . VAR tipo ID lista_variables SEMICOLON
    (5) variables -> . VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON
    (74) empty -> .

    VAR             shift and go to state 6
    RIGHTB          reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)

    variables                      shift and go to state 4
    bloque                         shift and go to state 59
    empty                          shift and go to state 60

state 53

    (16) parametro -> tipo ID mas_parametros .

    RIGHTP          reduce using rule 16 (parametro -> tipo ID mas_parametros .)
    INT             reduce using rule 16 (parametro -> tipo ID mas_parametros .)
    CHAR            reduce using rule 16 (parametro -> tipo ID mas_parametros .)
    BOOLEAN         reduce using rule 16 (parametro -> tipo ID mas_parametros .)
    FLOAT           reduce using rule 16 (parametro -> tipo ID mas_parametros .)
    STRING          reduce using rule 16 (parametro -> tipo ID mas_parametros .)


state 54

    (18) mas_parametros -> empty .

    RIGHTP          reduce using rule 18 (mas_parametros -> empty .)
    INT             reduce using rule 18 (mas_parametros -> empty .)
    CHAR            reduce using rule 18 (mas_parametros -> empty .)
    BOOLEAN         reduce using rule 18 (mas_parametros -> empty .)
    FLOAT           reduce using rule 18 (mas_parametros -> empty .)
    STRING          reduce using rule 18 (mas_parametros -> empty .)


state 55

    (17) mas_parametros -> COMMA . tipo ID
    (63) tipo -> . INT
    (64) tipo -> . CHAR
    (65) tipo -> . BOOLEAN
    (66) tipo -> . FLOAT
    (67) tipo -> . STRING

    INT             shift and go to state 12
    CHAR            shift and go to state 13
    BOOLEAN         shift and go to state 14
    FLOAT           shift and go to state 10
    STRING          shift and go to state 15

    tipo                           shift and go to state 61

state 56

    (12) metodo -> METHOD VOID ID LEFTP params RIGHTP LEFTB variables_list . bloque RIGHTB
    (2) variables_list -> variables_list . variables
    (19) bloque -> . bloque estatuto
    (20) bloque -> . empty
    (4) variables -> . VAR tipo ID lista_variables SEMICOLON
    (5) variables -> . VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON
    (74) empty -> .

    VAR             shift and go to state 6
    RIGHTB          reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)

    variables                      shift and go to state 4
    bloque                         shift and go to state 62
    empty                          shift and go to state 60

state 57

    (11) metodo -> METHOD VOID MAIN LEFTP params RIGHTP LEFTB variables_list . bloque RIGHTB
    (2) variables_list -> variables_list . variables
    (19) bloque -> . bloque estatuto
    (20) bloque -> . empty
    (4) variables -> . VAR tipo ID lista_variables SEMICOLON
    (5) variables -> . VAR tipo ID LEFTSB INT_CTE RIGHTSB lista_variables SEMICOLON
    (74) empty -> .

    VAR             shift and go to state 6
    RIGHTB          reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)

    variables                      shift and go to state 4
    bloque                         shift and go to state 63
    empty                          shift and go to state 60

state 58

    (7) lista_variables -> COMMA ID LEFTSB INT_CTE RIGHTSB lista_variables .

    SEMICOLON       reduce using rule 7 (lista_variables -> COMMA ID LEFTSB INT_CTE RIGHTSB lista_variables .)


state 59

    (13) metodo -> METHOD tipo ID LEFTP params RIGHTP LEFTB variables_list bloque . RIGHTB
    (19) bloque -> bloque . estatuto
    (21) estatuto -> . return
    (22) estatuto -> . lectura
    (23) estatuto -> . escritura
    (24) estatuto -> . llamada SEMICOLON
    (25) estatuto -> . asignacion
    (26) estatuto -> . ciclo
    (27) estatuto -> . condicion
    (28) return -> . RETURN exp SEMICOLON
    (29) lectura -> . ID ASSIGN READ LEFTP RIGHTP SEMICOLON
    (30) escritura -> . PRINT LEFTP exp RIGHTP SEMICOLON
    (31) llamada -> . ID LEFTP llamada_list RIGHTP
    (37) asignacion -> . ID ASSIGN exp SEMICOLON
    (38) asignacion -> . ID LEFTSB exp RIGHTSB ASSIGN exp SEMICOLON
    (39) ciclo -> . WHILE LEFTP exp RIGHTP LEFTB bloque RIGHTB
    (40) condicion -> . IF LEFTP exp RIGHTP LEFTB bloque RIGHTB
    (41) condicion -> . IF LEFTP exp RIGHTP LEFTB bloque RIGHTB ELSE LEFTB bloque RIGHTB

    RIGHTB          shift and go to state 76
    RETURN          shift and go to state 64
    ID              shift and go to state 73
    PRINT           shift and go to state 66
    WHILE           shift and go to state 65
    IF              shift and go to state 74

    ciclo                          shift and go to state 67
    return                         shift and go to state 72
    asignacion                     shift and go to state 75
    estatuto                       shift and go to state 68
    llamada                        shift and go to state 69
    condicion                      shift and go to state 70
    lectura                        shift and go to state 71
    escritura                      shift and go to state 77

state 60

    (20) bloque -> empty .

    RIGHTB          reduce using rule 20 (bloque -> empty .)
    RETURN          reduce using rule 20 (bloque -> empty .)
    ID              reduce using rule 20 (bloque -> empty .)
    PRINT           reduce using rule 20 (bloque -> empty .)
    WHILE           reduce using rule 20 (bloque -> empty .)
    IF              reduce using rule 20 (bloque -> empty .)


state 61

    (17) mas_parametros -> COMMA tipo . ID

    ID              shift and go to state 78


state 62
